doc: update the example